--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "angular-tabler-icons": "^3.26.0",
     "daisyui": "^5.1.6",
+    "date-fns": "^4.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.12",
